   * Add elm_genlist_nth_item_get
   * Add elm_gengrid_nth_item_get
   * Add elm_config_selection_unfocused_clear_get and elm_config_selection_unfocused_clear_set
   * Add elm_need_edbus() and EDBus.h support with ELM_EDBUS2 macro to integrate edbus (v2). Deprecated elm_need_e_dbus() (e_dbus, v1).
   * Add window profile set/get API in elm_win
   * Add elm_sys_notify.[ch]

Improvements:

   * Toolbar widget is now a scrollable widget.
   * Entry widget is now a scrollable layout.
   * Fileselector entry widget is now an elm layout.
   * Ctxpopup widget is now an elm layout.
   * Multibutton entry entry is now an elm layout.
   * Popup widget is now an elm layout.
   * Panel widget is now an elm layout.
   * Improve elm map module loading/searching efficiency.
   * Diskselector handles dyanmic show/hide of icons now like buttons.
   * Plug widget handles image object deletion
   * Handle COMPOUND_TEXT cnp
   * Conformant widget handles displaymode change related with keypad.
   * Conformant widget handles indicator service.

Fixes:

   * Now elm_datetime_field_limit_set() can set year limits wihtout problems.
   * Fix re-order animation when it doesn't end correctly.
   * Fix popup to apply the same style to the notify sub-widget.
   * Fix Ctxpopup direction if unknown priority used.
   * Fix diskselector when bounce off and round enabled.
   * Fix bubble info field set.
   * Escape theme filename correctly.
   * Fix diskselector selection of middle item.
   * Fix multibuttonentry list corruption.
   * Fix copy&paste error in elm_flip.
   * Fix possible invalid memory access in elm_access.
   * Fix diskselector bug with more than 4 items.
   * Fix conform widget to be part of focus chain.
   * Fix genlist reorder mode item not being resized on genlist resize.
   * Fix on_focus_region() issue.
   * Fixed gengrid wrong_calc_job parameter.
   * Fix elm_transit image animation that last few frames are skipped.
   * FIx elm_transit to accept proxy object.