@@ -19,6 +19,7 @@ AM_CPPFLAGS = \
 @ELEMENTARY_EDBUS_CFLAGS@ \
 @ELEMENTARY_EDBUS2_CFLAGS@ \
 @ELEMENTARY_EFREET_CFLAGS@ \
+@ELEMENTARY_ELOCATION_CFLAGS@ \
 @ELEMENTARY_EWEATHER_CFLAGS@ \
 @ELEMENTARY_ETHUMB_CFLAGS@ \
 @ELEMENTARY_WEB_CFLAGS@ \
@@ -145,6 +146,7 @@ elementary_test_LDADD = $(top_builddir)/src/lib/libelementary.la \
 	@ELEMENTARY_EDBUS_LIBS@ \
 	@ELEMENTARY_EDBUS2_LIBS@ \
 	@ELEMENTARY_EFREET_LIBS@ \
+	@ELEMENTARY_ELOCATION_LIBS@ \
 	@ELEMENTARY_EMAP_LIBS@ \
 	@ELEMENTARY_LIBS@ \
 	@EIO_LIBS@ \
@@ -160,6 +162,7 @@ elementary_config_LDADD = $(top_builddir)/src/lib/libelementary.la \
 	@ELEMENTARY_EDBUS_LIBS@ \
 	@ELEMENTARY_EDBUS2_LIBS@ \
 	@ELEMENTARY_EFREET_LIBS@ \
+	@ELEMENTARY_ELOCATION_LIBS@ \
 	@ELEMENTARY_EMAP_LIBS@ \
 	@ELEMENTARY_LIBS@ \
 	@EIO_LIBS@ \
@@ -176,6 +179,7 @@ elementary_codegen_LDADD = \
 	@ELEMENTARY_EDBUS_LIBS@ \
 	@ELEMENTARY_EDBUS2_LIBS@ \
 	@ELEMENTARY_EFREET_LIBS@ \
+	@ELEMENTARY_ELOCATION_LIBS@ \
 	@ELEMENTARY_EMAP_LIBS@ \
 	@ELEMENTARY_LIBS@ \
 	@EIO_LIBS@ \
@@ -206,6 +210,7 @@ elementary_quicklaunch_LDADD = $(top_builddir)/src/lib/libelementary.la \
 	@ELEMENTARY_EDBUS_LIBS@ \
 	@ELEMENTARY_EDBUS2_LIBS@ \
 	@ELEMENTARY_EFREET_LIBS@ \
+	@ELEMENTARY_ELOCATION_LIBS@ \
 	@ELEMENTARY_EMAP_LIBS@ \
 	@ELEMENTARY_LIBS@ \
 	@EIO_LIBS@ \
@@ -232,6 +237,7 @@ elementary_testql_la_LIBADD = $(top_builddir)/src/lib/libelementary.la \
 	@ELEMENTARY_EDBUS_LIBS@ \
 	@ELEMENTARY_EDBUS2_LIBS@ \
 	@ELEMENTARY_EFREET_LIBS@ \
+	@ELEMENTARY_ELOCATION_LIBS@ \
 	@ELEMENTARY_EMAP_LIBS@ \
 	@ELEMENTARY_LIBS@ \
 	@EIO_LIBS@ \
@@ -246,6 +252,7 @@ elementary_testql_LDADD = $(top_builddir)/src/lib/libelementary.la \
 	@ELEMENTARY_EDBUS_LIBS@ \
 	@ELEMENTARY_EDBUS2_LIBS@ \
 	@ELEMENTARY_EFREET_LIBS@ \
+	@ELEMENTARY_ELOCATION_LIBS@ \
 	@ELEMENTARY_EMAP_LIBS@ \
 	@ELEMENTARY_LIBS@ \
 	@EIO_LIBS@ \
